<resources>
    <string name="app_name" translatable="false">Trucksta</string>
    <string name="intro">Welcome To Trucksta</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>


    <string name="lang">Language Preference</string>
    <string-array name="languages">
        <item>English(default)</item>
        <item>हिंदी </item>
        <item>kannada </item>


        <item>தமிழ</item>
        <item>മലയാളം</item>
    </string-array>

    <string name="next">Next</string>
    <string name="UploadDocumnets">Upload Documents</string>
    <string name="getverified">And get verified!</string>

    // Strings for Document uploads //

    <string name="aadhar">Aadhar</string>
    <string name="voterid">Voter Id</string>
    <string name="pan">Pan Card</string>
    <string name="dl">DL</string>


</resources>
