<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="app.mindweaversolutions.trucksta.trucksta.IntroductoryActivity">

    <TextView
        android:fontFamily="@font/cabin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <ImageView
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/delivery"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal">
        <Button

            android:textSize="18dp"
            android:fontFamily="@font/cabin"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@drawable/button_bg_stroke"
           />

        <Button
            android:textSize="18dp"
            android:fontFamily="@font/cabin"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_bg_stroke"
            />
    </LinearLayout>

</LinearLayout>
